src/objects/SObjectField__c.object
<CustomObject>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <label>SObject</label>
        <referenceTo>SObjectType__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>anytype</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>base64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combobox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataCategoryGroupReference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DateTime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EncryptedString</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiPicklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextArea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SObjectField</label>
    <nameField>
        <label>Field Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA0000002GPxYMAW_00NA0000009coPAMAY</fullName>
        <active>true</active>
        <field>QueryCondition__c.Field__c</field>
        <filterItems>
            <field>$Source.SObjectType__c</field>
            <operation>equals</operation>
            <valueField>SObjectField__c.SObject__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>QueryCondition_Field</name>
        <sourceObject>QueryCondition__c</sourceObject>
    </namedFilters>
    <pluralLabel>SObjectFields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>